--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
 				<div class="col-md-12 gtco-widget" text-justify="inter-ideograph">
 					<h4>调查背景</h4>
 					<br />
-					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;非常感谢参与此次调查。受国务院学位办委托，为全面了解心理学学术学位研究生课程建设和学习现状，特开展此次调研。问卷采用匿名方式，问卷数据仅供研究之用。请根据实际情况回答。感谢大力支持！</p>
+					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;非常感谢您参与此次调查。受国务院学位办委托，为全面了解心理学学术学位研究生课程建设和学习现状，特开展此次调研。问卷采用匿名方式，问卷数据仅供研究之用。请根据实际情况回答。感谢大力支持！</p>
 				</div>
 			</div>
 			<div class="row copyright">
 				<div class="col-md-12">
 					<p align="center" text-justify="center">
-						<small class="block">&copy; 2017 Beijing Normal University, School Of Psychology. All Rights Reserved.</small>
+						<small class="block">&copy; 2017 Beijing Normal University, School of Psychology. All Rights Reserved.</small>
 						<br />
 						<small class="block"> Contact:&nbsp;E-mail: weicong@bnu.edu.cn;&nbsp;&nbsp;Tel: 010-58802759</small>
 					</p>
