--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							<span class="icon">
 								<img height="150px" align = "center"  src="/images/img_1.jpg"></img>
 							</span>
-							<h3>博士课程-教学管理人员</h3>
+							<h3>博士课程-教学管理人员问卷</h3>
 							<p><a href="https://bnupsych.asia.qualtrics.com/SE/?SID=SV_7WFKGH5xAZu6uuV" class="btn btn-primary">进入调查</a></p>
 						</div>
 					</div>
@@ -96,7 +96,7 @@
 							<span class="icon">
 								<img height="150px" align = "center"  src="/images/img_2.jpg"></img>
 							</span>
-							<h3>博士课程-教师</h3>
+							<h3>博士课程-教师问卷</h3>
 							<p><a href="https://bnupsych.asia.qualtrics.com/SE/?SID=SV_39JWrZjfyOau1Br" class="btn btn-primary">进入调查</a></p>
 						</div>
 					</div>
@@ -105,7 +105,7 @@
 							<span class="icon">
 								<img height="150px" align = "center"  src="/images/img_3.jpg"></img>
 							</span>
-							<h3>博士课程-学生</h3>
+							<h3>博士课程-学生问卷</h3>
 							<p><a href="https://bnupsych.asia.qualtrics.com/SE/?SID=SV_01WwQgFQK7EAG3z" class="btn btn-primary">进入调查</a></p>
 						</div>
 					</div>
@@ -114,7 +114,7 @@
 							<span class="icon">
 								<img height="150px" align = "center"  src="/images/img_4.jpg"></img>
 							</span>
-							<h3>硕士课程-教学管理人员</h3>
+							<h3>硕士课程-教学管理人员问卷</h3>
 							<p><a href="https://bnupsych.asia.qualtrics.com/SE/?SID=SV_bCNQveER4RtwqPj" class="btn btn-primary">进入调查</a></p>
 						</div>
 					</div>
@@ -123,7 +123,7 @@
 							<span class="icon">
 								<img height="150px" align = "center"  src="/images/img_5.jpg"></img>
 							</span>
-							<h3>硕士课程-教师</h3>
+							<h3>硕士课程-教师问卷</h3>
 							<p><a href="https://bnupsych.asia.qualtrics.com/SE/?SID=SV_e5w75HlSCbgBKjX" class="btn btn-primary">进入调查</a></p>
 						</div>
 					</div>
@@ -132,7 +132,7 @@
 							<span class="icon">
 								<img height="150px" align = "center"  src="/images/img_6.jpg"></img>
 							</span>
-							<h3>硕士课程-学生</h3>
+							<h3>硕士课程-学生问卷</h3>
 							<p><a href="https://bnupsych.asia.qualtrics.com/SE/?SID=SV_3xdyL6Od9BKA5iR" class="btn btn-primary">进入调查</a></p>
 						</div>
 					</div>
